<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoPage">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/youtube_fragment"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragmentX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/youtube_player_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBlackScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="18dp"
        android:clickable="true"
        android:contentDescription="@string/videoPage_lights_out_button_info"
        android:src="@drawable/blackscreen_turnon"
        app:backgroundTint="#8E8E8E"
        app:layout_constraintBottom_toTopOf="@+id/btnPreferences"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/videoPage_set_timer"
        android:focusable="true"
        android:outlineProvider="background"
        android:src="@android:drawable/ic_lock_idle_alarm"
        app:backgroundTint="#13CC51"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:useCompatPadding="false" />


    <TextView
        android:id="@+id/tvTimerDisplay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#535353"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="5dp"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:theme="@style/Widget.AppCompat.Toolbar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:00:00" />

    <TextView
        android:id="@+id/tvBlackScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/svExtras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_fragment" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/videoTitle_sample"
        android:textColor="#353535"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_fragment" />

    <TextView
        android:id="@+id/tvVideoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/videoPage_info_sample"
        android:textColor="#353535"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="18dp"
        android:clickable="true"
        android:contentDescription="@string/videoPage_preferences_button"
        android:src="@android:drawable/ic_menu_preferences"
        app:layout_constraintBottom_toTopOf="@+id/btnTimer"
        app:layout_constraintEnd_toEndOf="@+id/tvVideoInfo"
        android:focusable="true" />

    <ScrollView
        android:id="@+id/svExtras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTimerDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/videoPage_description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:elevation="1dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scrollbars="vertical"
                android:text="@string/sample_text"
                android:textColor="#353535"
                android:textIsSelectable="true"
                android:visibility="gone" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/videoPage_comments"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:elevation="1dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="false"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swRelatedVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/videoPage_related_videos"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRelatedVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:elevation="1dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="false"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>