...

    <string name="sample_text">Sample Text</string>

    <string name="searchHint">Search YouTube</string>

    <string name="timerMenu_timeramount">00h 00m 00s</string>
    <string name="timerMenu_starttimer">Start Timer</string>
    <string name="timerMenu_backspace">Backspace</string>

    <string name="videoPage_info_sample">1,894,124,456 views\n8,500,500M Likes * 35,000,000 dislikes * 8000 comments\nPosted September 25, 2009 by ChillHop Music</string>
    <string name="videoPage_preferences_button">Preferences button</string>
    <string name="videoPage_description">Description</string>
    <string name="videoPage_comments">Comments</string>
    <string name="videoPage_related_videos">Related Videos</string>
    <string name="videoPage_set_timer">Set timer</string>
    <string name="videoPage_lights_out_button_info">Turns screen black (less light for when you are trying to sleep and saves power on OLED screens)</string>

    <string name="videoRow_duration_sample">108:24</string>
    <string name="videoRow_info_sample">Chillhop Music * 8,844,844,844 views * September 24, 2009</string>

    <string name="videoTitle_sample">Chillhop Music Jazzy Lofi Beats and whatnot rest of title</string>
...
